groups/flowDefinitions/objects/TW1_Terminal__c.object
<CustomObject>
    <fields>
        <fullName>TW1_Operador__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operador</label>
        <referenceTo>TW1_Operador__c</referenceTo>
        <relationshipLabel>Terminais</relationshipLabel>
        <relationshipName>Terminais</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Shopping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shopping</label>
        <referenceTo>TW1_Shopping__c</referenceTo>
        <relationshipLabel>Terminais</relationshipLabel>
        <relationshipName>Terminais</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Stand__c</fullName>
        <label>Stand</label>
        <referenceTo>TW1_Stand__c</referenceTo>
        <relationshipLabel>Terminais</relationshipLabel>
        <relationshipName>Terminais</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Terminal</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>TW1_Shopping__c</columns>
        <columns>TW1_Operador__c</columns>
        <columns>TW1_Stand__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <label>Nome do Terminal</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Terminais</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>